# PeakViewer

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  stubs.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: flake8.yml  mypy.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
images/: menu_images.xcf
peakviewer/: __init__.py  __main__.py  about_dialog.py  app.py  peak_canvas_panel.py  peak_viewer_frame.py  toolbar.py  versions.py
peakviewer/icons/: __init__.py
