[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "peakviewer"
version = "0.0.0"
description = "View aligned peaks to assess peak shape."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/GunShotMatch/peakviewer"
"Issue Tracker" = "https://github.com/GunShotMatch/peakviewer/issues"
"Source Code" = "https://github.com/GunShotMatch/peakviewer"

[project.scripts]
peakviewer = "peakviewer.__main__:main"

[tool.whey]
base-classifiers = [ "Development Status :: 3 - Alpha",]
python-versions = [ "3.8", "3.9", "3.10", "3.11",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
additional-files = [ "include peakviewer/icons/*.png", "include peakviewer/icons/*.ico",]

[tool.mypy]
python_version = "3.9"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.importcheck]
always = [
    "peakviewer",
    "peakviewer.icons",
    "peakviewer.__main__",
    "peakviewer.about_dialog",
    "peakviewer.app",
    "peakviewer.peak_canvas_panel",
    "peakviewer.peak_viewer_frame",
    "peakviewer.toolbar",
]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dep_checker.name_mapping]
wxpython = "wx"
